# default_franka_controllers

./: README.md  add_controller.py
dyros_fr3_controllers/: CMakeLists.txt  dyros_fr3_controllers_plugin.xml  package.xml
dyros_fr3_controllers/config/: controllers.yaml  franka.config.yaml
dyros_fr3_controllers/include/dyros_fr3_controllers/: default_controller.h  test_effort_controller.h  test_position_controller.h  test_velocity_controller.h
dyros_fr3_controllers/launch/: example.launch.py  franka.launch.py  robot.rviz  start_control.launch.py
dyros_fr3_controllers/src/: default_controller.cpp  test_effort_controller.cpp  test_position_controller.cpp  test_velocity_controller.cpp
kyu_franka_controllers/: CMakeLists.txt  kyu_franka_controllers_plugin.xml  package.xml
kyu_franka_controllers/config/: controllers.yaml  franka.config.yaml
kyu_franka_controllers/include/: math_type_define.h
kyu_franka_controllers/include/kyu_franka_controllers/: default_controller.h  test_effort_controller.h  test_position_controller.h  test_velocity_controller.h
kyu_franka_controllers/kyu_franka_controllers/include/kyu_franka_controllers/: test_controller.h
kyu_franka_controllers/kyu_franka_controllers/src/: test_controller.cpp
kyu_franka_controllers/launch/: example.launch.py  franka.launch.py
kyu_franka_controllers/src/: default_controller.cpp  test_effort_controller.cpp  test_position_controller.cpp  test_velocity_controller.cpp
kyu_franka_controllers/urdfs/: fr3_franka_hand.srdf  fr3_franka_hand.urdf  fr3_franka_w_umi.urdf
