<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dyros_fr3_controllers</name>
  <version>2.0.2</version>
  <description>controller package for franka fr3</description>
  <maintainer email="monglee147@gmail.com">dyros</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>controller_interface</depend>
  <depend>franka_msgs</depend>
  <depend>franka_semantic_components</depend>
  <depend>pinocchio</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>

  <exec_depend>franka_description</exec_depend>
  <exec_depend>franka_hardware</exec_depend>
  <exec_depend>franka_robot_state_broadcaster</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_cmake</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_clang_tidy</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_flake8</test_depend>
  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_pep257</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>hardware_interface_testing</test_depend>
  <test_depend>ros2_control_test_assets</test_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
